--- a/forms.html
+++ b/forms.html
@@ -7,7 +7,7 @@
     <title>Forms</title>
 </head>
 <body>
-    <h1> THIS IS HTML FORM TOTURIAL</h1>
+    <h1> THIS IS HTML FORM TUTORIAL</h1>
     <form action="anubhav.hh">
         <div>
             <label for="name">Name:</label>
